bridge: Unlock channel during Local peer check.

It's not safe to keep the channel locked while locking
the peer Local channel, as it can result in a deadlock.

This change unlocks it during this time but keeps the
bridge locked to ensure nothing changes about the bridge.

ASTERISK-29821

Change-Id: Ib68eb7037e5a479bcc2aceee77337cdde1fbdde6
(cherry picked from commit d83a46869ed5e13d0ed5a898bac8faed61d91203)